# lumari_watch

./: .gitignore  .idf_path.example  CMakeLists.txt  README.md  ROADMAP.md  run_qemu.sh  sdkconfig.defaults  sdkconfig.defaults.qemu  sdkconfig.defaults.qemu_fb
components/aura/: CMakeLists.txt  aura_engine.cpp  aura_engine.h
components/board_hal/: display_hal.cpp  idf_component.yml
components/config/: lumari_config.h
components/creature/: CMakeLists.txt  creature_engine.cpp  creature_engine.h
components/cutscene/: CMakeLists.txt  cutscene_engine.cpp  cutscene_engine.h
components/display_hal/: display_hal.cpp  idf_component.yml
components/engine/: CMakeLists.txt  framebuffer_manager.cpp  framebuffer_manager.h  layer_manager.cpp  layer_manager.h  render_engine.cpp  render_engine.h  sprite_renderer.cpp  sprite_renderer.h  ui_manager.cpp  ui_manager.h  ui_state.h
components/engine/screens/: ui_crafting_screen.cpp  ui_crafting_screen.h  ui_home_screen.cpp  ui_home_screen.h  ui_inventory_screen.cpp  ui_inventory_screen.h  ui_lore_screen.cpp  ui_lore_screen.h  ui_quest_screen.cpp  ui_quest_screen.h  ui_system_screen.cpp  ui_system_screen.h
components/hal/: CMakeLists.txt  display_hal.cpp  display_hal.h
components/input/: CMakeLists.txt  (+2 more)
docs/: AUDIT_ACTIONS.md  BOARD_FIRMWARE_CONTEXT.md  DEPENDENCIES.md  HARDWARE_REFERENCES.md  WAVESHARE_FACTORY_AND_TROUBLESHOOTING.md
main/: CMakeLists.txt  Kconfig  app_entry.cpp  idf_component.yml  main.cpp  phase0_demo.cpp  phase0_demo.h
scripts/: build_qemu_from_fork.sh  fix_co5300_headers.sh  install_dependencies.sh
(+18 files in other folders)
